...
    }

    return(
        <View style={styles.container}>
            <Image source={require('../assets/turntable.png')} style={styles.turntable}></Image>
            <Text style={styles.timerText}>{formatTime(seconds*1000)}</Text>
            <AppButton title={recordingStatus ? 'Stop Recording' : 'Start Recording'} onPress={recordingStatus ? stopRecording : startRecording}></AppButton>
        </View>
    )

}

export default RecordScreen;
...
